Fix drop down rtl options are left aligned (#1310)

--- a/src/DropdownLayout/DropdownLayout.scss
+++ b/src/DropdownLayout/DropdownLayout.scss
@@ -141,6 +141,7 @@ a[data-hook=link-item] {
 
 :global(.rtl) .option {
   text-align: right;
+  direction: rtl;
   padding-right: 24px;
   padding-left: 24px;
 }
